fix line error.

--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
 <a href="https://www.researchgate.net/profile/Anupama-Kaushik-2" target="_blank" rel="noopener">Prof. Anupama Kaushik</a> .Previously, I worked as a Software Engineer at
 <a href="https://www.optum.com/" target="_blank" rel="noopener">UnitedHealth Group</a> for 2 years. I interned at
 <a href="" target="_blank" rel="noopener">Indraprastha Institute Of Information Technology</a> in the summer of 2018 under the supervision of
-    <a href="https://midas.iiitd.edu.in/team/rajiv-ratn-shah.html" target="_blank" rel="noopener">Dr. Rajiv Ratn</a></p>.
+    <a href="https://midas.iiitd.edu.in/team/rajiv-ratn-shah.html" target="_blank" rel="noopener">Dr. Rajiv Ratn.</a></p>
 <h3 id="current-research">Current Research</h3>
 <p><strong>Natural Language Generation of  sentence simplification</strong>Working on neural models for simplification and summarisation; for generation for long form, multidocument input question answering; for multilingual generation from Abstract Meaning Representations and for response generation for dialog.</p>
     <p><strong>Speech modeling</strong> My research focuses on speech processing, with particular emphasis to multisource (source separation, robust speech recognition)
@@ -805,7 +805,7 @@
 
           <li>Reinforcement Learning</li>
 
-          <l>Speech Processing</l>
+          <li>Speech Processing</li>
           
         </ul>
       </div>
@@ -1091,12 +1091,12 @@
                 <span>Delhi, India</span>
               
             </div>
-            <div class="card-text">Developed a multi-modal technique to predict popularity of a social media post under ACMMM challenge</div>
-            <div class="card-text">Worked on a model to estimate the locations where
+            <li>Developed a multi-modal technique to predict popularity of a social media post under ACMMM challenge</li>
+            <li>Worked on a model to estimate the locations where
               multimedia items were captured using an algorithm
-              that inspects the content and metadata.</div>
-            <div class="card-text">Developed an automated feature-based SVM classification technique that can help selective tweets reach
-              relevant medical authorities.</div>
+              that inspects the content and metadata.</li>
+            <li>Developed an automated feature-based SVM classification technique that can help selective tweets reach
+              relevant medical authorities.</li>
 
 
           </div>
