--- a/index.html
+++ b/index.html
@@ -1091,12 +1091,15 @@
                 <span>Delhi, India</span>
               
             </div>
+			 <div class="card-text"><p></p>
+			 <ul>
             <li>Developed a multi-modal technique to predict popularity of a social media post under ACMMM challenge</li>
             <li>Worked on a model to estimate the locations where
               multimedia items were captured using an algorithm
               that inspects the content and metadata.</li>
             <li>Developed an automated feature-based SVM classification technique that can help selective tweets reach
               relevant medical authorities.</li>
+			  </ul>
 
 
           </div>
