div tag aligned

--- a/index.html
+++ b/index.html
@@ -950,18 +950,17 @@
    <span >Sahil Chopra</span>,<span>Ankita Gupta</span>, <span> Anupama Kaushik</span>
   </span>
   (2019).
-  <a href="https://www.aclweb.org/anthology/W19-5052/"> Knowledge Directed Multi-task Framework for Natural Language Inference in Clinical Domain.</a>.
+  <a href="https://www.aclweb.org/anthology/W19-5052/"> Knowledge Directed Multi-task Framework for Natural Language Inference in Clinical Domain</a>.
    2019.
-
-
-  <p>
-
+<p>
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://aclanthology.org/W19-5052.pdf" target="_blank" rel="noopener">
   PDF
 </a>
+</p>
+        </div>
 
-
-
+    <div class="pub-list-item" style="margin-bottom: 1rem">
+      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="article-metadata li-cite-author">
 
 
@@ -977,14 +976,9 @@
               PDF
             </a>
           </p>
-
-
-        </div>
-
-
+      </div>
   </div>
 </div>
-
     </div>
   </section>
 
