--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   
   <link rel="stylesheet" href="/css/academic.css">
 
-  
+
 
 
 
@@ -212,44 +212,14 @@
 
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-ETD8F55TYX"></script>
   <script>
-   window.dataLayer = window.dataLayer || [];
-
-  function gtag() {
-      dataLayer.push(arguments);
-  }
-
-  function trackOutboundLink(url, target) {
-    gtag('event', 'click', {
-         'event_category': 'outbound',
-         'event_label': url,
-         'transport_type': 'beacon',
-         'event_callback': function () {
-           if (target !== '_blank') {
-             document.location = url;
-           }
-         }
-    });
-    console.debug("Outbound link clicked: " + url);
-  }
-
-  function onClickCallback(event) {
-    if ((event.target.tagName !== 'A') || (event.target.host === window.location.host)) {
-      return;
-    }
-    trackOutboundLink(event.target, event.target.getAttribute('target'));
-  }
-
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+
   gtag('config', 'G-ETD8F55TYX');
-  document.addEventListener('click', onClickCallback, false);
 </script>
-
-
-
-
 
   <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Sahil Chopra">
   
